package com.mikaservices.platform.common.enums

enum class ConditionAcces {
    FACILE,
    MOYEN,
    DIFFICILE,
    TRES_DIFFICILE
}
