package com.mikaservices.platform.common.enums

enum class ZoneClimatique {
    NORD,
    SUD,
    COTIER,
    INTERIEUR,
    ESTUAIRE
}
